--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9e9185">  <td>19/01/22 20:53:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC02.init()[pri:0, instance:testCases.TC02@128d2484]">&gt;&gt;init</td> 
-<td>&nbsp;</td>  <td>TestNG@164510599</td>   <td></td> </tr>
-<tr bgcolor="fead87">  <td>19/01/22 20:53:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC01.init()[pri:0, instance:testCases.TC01@6aeb35e6]">&gt;&gt;init</td> 
-<td>&nbsp;</td>  <td>TestNG@295039132</td>   <td></td> </tr>
-<tr bgcolor="fead87">  <td>19/01/22 20:53:31</td>   <td>15875</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC01.invalidLogin()[pri:0, instance:testCases.TC01@6aeb35e6]">invalidLogin</td> 
-  <td>TestNG@295039132</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>19/01/22 20:53:31</td>   <td>15528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC02.invalidRegister()[pri:0, instance:testCases.TC02@128d2484]">invalidRegister</td> 
-  <td>TestNG@164510599</td>   <td></td> </tr>
-<tr bgcolor="9e9185">  <td>19/01/22 20:53:45</td>   <td>29364</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC02.tearDown()[pri:0, instance:testCases.TC02@128d2484]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG@164510599</td>   <td></td> </tr>
-<tr bgcolor="fead87">  <td>19/01/22 20:53:47</td>   <td>31464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TC01.tearDown()[pri:0, instance:testCases.TC01@6aeb35e6]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>TestNG@295039132</td>   <td></td> </tr>
+<tr bgcolor="9aa292">  <td>19/01/23 15:02:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC02@7c7b252e]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1113711663</td>   <td></td> </tr>
+<tr bgcolor="9aa292">  <td>19/01/23 15:02:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC01@74f0ea28]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1193707740</td>   <td></td> </tr>
+<tr bgcolor="fead87">  <td>19/01/23 15:07:14</td>   <td>308170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC01.invalidLogin()[pri:0, instance:testCases.TC01@74f0ea28]">invalidLogin</td> 
+  <td>TestNG@1193707740</td>   <td></td> </tr>
+<tr bgcolor="c0cdad">  <td>19/01/23 15:04:28</td>   <td>142517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC02.invalidRegister()[pri:0, instance:testCases.TC02@7c7b252e]">invalidRegister</td> 
+  <td>TestNG@1113711663</td>   <td></td> </tr>
+<tr bgcolor="9aa292">  <td>19/01/23 15:14:35</td>   <td>749392</td> <td title="&lt;&lt;SuitClass.renameLog()[pri:0, instance:testCases.TC02@7c7b252e]">&lt;&lt;renameLog</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@758348212</td>   <td></td> </tr>
+<tr bgcolor="9aa292">  <td>19/01/23 15:14:34</td>   <td>747885</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC02@7c7b252e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1113711663</td>   <td></td> </tr>
 </table>
