--- a/test-output/old/Suite/toc.html
+++ b/test-output/old/Suite/toc.html
@@ -20,18 +20,18 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Invalid Login (1/0/0)</td><td valign='top' align='right'>
-  <a href='Invalid Login.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Invalid Register (0/1/0)</td><td valign='top' align='right'>
+  <a href='Invalid Register.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-skipped'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Invalid Register (1/0/0)</td><td valign='top' align='right'>
-  <a href='Invalid Register.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Invalid Login (0/0/1)</td><td valign='top' align='right'>
+  <a href='Invalid Login.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
