--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9aa292">  <td>19/01/23 15:02:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC02@7c7b252e]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1113711663</td>   <td></td> </tr>
-<tr bgcolor="9aa292">  <td>19/01/23 15:02:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC01@74f0ea28]">&gt;&gt;init</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1193707740</td>   <td></td> </tr>
-<tr bgcolor="fead87">  <td>19/01/23 15:07:14</td>   <td>308170</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC01.invalidLogin()[pri:0, instance:testCases.TC01@74f0ea28]">invalidLogin</td> 
-  <td>TestNG@1193707740</td>   <td></td> </tr>
-<tr bgcolor="c0cdad">  <td>19/01/23 15:04:28</td>   <td>142517</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC02.invalidRegister()[pri:0, instance:testCases.TC02@7c7b252e]">invalidRegister</td> 
-  <td>TestNG@1113711663</td>   <td></td> </tr>
-<tr bgcolor="9aa292">  <td>19/01/23 15:14:35</td>   <td>749392</td> <td title="&lt;&lt;SuitClass.renameLog()[pri:0, instance:testCases.TC02@7c7b252e]">&lt;&lt;renameLog</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@758348212</td>   <td></td> </tr>
-<tr bgcolor="9aa292">  <td>19/01/23 15:14:34</td>   <td>747885</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC02@7c7b252e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG@1113711663</td>   <td></td> </tr>
+<tr bgcolor="78d6a3">  <td>19/01/24 00:12:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC04.checkGalactioNavigation()[pri:0, instance:testCases.TC04@76505305]">checkGalactioNavigation</td> 
+  <td>main@1881561036</td>   <td></td> </tr>
+<tr bgcolor="71b3bc">  <td>19/01/24 00:12:34</td>   <td>-15236</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC03.checkMobileAppNavigation()[pri:0, instance:testCases.TC03@1aafa419]">checkMobileAppNavigation</td> 
+  <td>main@1881561036</td>   <td></td> </tr>
+<tr bgcolor="729d65">  <td>19/01/24 00:13:06</td>   <td>16179</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC05.checkSGGPSNavigation()[pri:0, instance:testCases.TC05@59474f18]">checkSGGPSNavigation</td> 
+  <td>main@1881561036</td>   <td></td> </tr>
+<tr bgcolor="9aa292">  <td>19/01/24 00:11:55</td>   <td>-54722</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC01@74f0ea28]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1881561036</td>   <td></td> </tr>
+<tr bgcolor="9aa292">  <td>19/01/24 00:12:13</td>   <td>-36937</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC02@7c7b252e]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1881561036</td>   <td></td> </tr>
+<tr bgcolor="9aa292">  <td>19/01/24 00:12:25</td>   <td>-24505</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC03@1aafa419]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1881561036</td>   <td></td> </tr>
+<tr bgcolor="9aa292">  <td>19/01/24 00:12:40</td>   <td>-9831</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC04@76505305]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1881561036</td>   <td></td> </tr>
+<tr bgcolor="9aa292">  <td>19/01/24 00:12:56</td>   <td>6726</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;SuitClass.init()[pri:0, instance:testCases.TC05@59474f18]">&gt;&gt;init</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1881561036</td>   <td></td> </tr>
+<tr bgcolor="fead87">  <td>19/01/24 00:12:07</td>   <td>-43069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC01.invalidLogin()[pri:0, instance:testCases.TC01@74f0ea28]">invalidLogin</td> 
+  <td>main@1881561036</td>   <td></td> </tr>
+<tr bgcolor="c0cdad">  <td>19/01/24 00:12:22</td>   <td>-27660</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC02.invalidRegister()[pri:0, instance:testCases.TC02@7c7b252e]">invalidRegister</td> 
+  <td>main@1881561036</td>   <td></td> </tr>
+<tr bgcolor="9aa292">  <td>19/01/24 00:13:13</td>   <td>22787</td> <td title="&lt;&lt;SuitClass.renameLog()[pri:0, instance:testCases.TC05@59474f18]">&lt;&lt;renameLog</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1881561036</td>   <td></td> </tr>
+<tr bgcolor="9aa292">  <td>19/01/24 00:12:11</td>   <td>-38353</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC01@74f0ea28]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1881561036</td>   <td></td> </tr>
+<tr bgcolor="9aa292">  <td>19/01/24 00:12:24</td>   <td>-25645</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC02@7c7b252e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1881561036</td>   <td></td> </tr>
+<tr bgcolor="9aa292">  <td>19/01/24 00:12:39</td>   <td>-10870</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC03@1aafa419]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1881561036</td>   <td></td> </tr>
+<tr bgcolor="9aa292">  <td>19/01/24 00:12:55</td>   <td>5743</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC04@76505305]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1881561036</td>   <td></td> </tr>
+<tr bgcolor="9aa292">  <td>19/01/24 00:13:12</td>   <td>21805</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;SuitClass.tearDown()[pri:0, instance:testCases.TC05@59474f18]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1881561036</td>   <td></td> </tr>
 </table>
