--- a/test-output/old/Suite/toc.html
+++ b/test-output/old/Suite/toc.html
@@ -8,9 +8,9 @@
 <h3><p align="center">Results for<br/><em>Suite</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>2 tests</td>
-<td><a target='mainFrame' href='classes.html'>2 classes</a></td>
-<td>2 methods:<br/>
+<td>5 tests</td>
+<td><a target='mainFrame' href='classes.html'>5 classes</a></td>
+<td>5 methods:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -22,16 +22,40 @@
 </tr></table>
 <table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Invalid Register (0/1/0)</td><td valign='top' align='right'>
-  <a href='Invalid Register.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Invalid Login (0/1/0)</td><td valign='top' align='right'>
+  <a href='Invalid Login.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-skipped'>
+<table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Invalid Login (0/0/1)</td><td valign='top' align='right'>
-  <a href='Invalid Login.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Check Mobile App Navigation (1/0/0)</td><td valign='top' align='right'>
+  <a href='Check Mobile App Navigation.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Check SG GPS Navigation (1/0/0)</td><td valign='top' align='right'>
+  <a href='Check SG GPS Navigation.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Galactio Page Navigation (1/0/0)</td><td valign='top' align='right'>
+  <a href='Galactio Page Navigation.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
+<table width='100%' class='test-passed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Invalid Register (1/0/0)</td><td valign='top' align='right'>
+  <a href='Invalid Register.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
